gccida/g0/dw2_asm_output_nstring
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dw2_asm_output_nstring/src/dwarf2asm.c:735:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)c] & 0x10) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dw2_asm_output_nstring/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dw2_asm_output_nstring/src/dwarf2asm.c:764:7: error: use of undeclared identifier 'byte_76C668'
v12 = byte_76C668[*( unsigned __int8 *)v6]; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dw2_asm_output_nstring/src/dwarf2asm.c:797:7: error: use of undeclared identifier 'byte_76C668'
v10 = byte_76C668[*v14]; 
      ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dw2_asm_output_nstring/src/obj/dwarf2asm.o] Error 1
